<resources>
    <string name="app_name">SOP-Mobile</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Электронная почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Недопустимое имя пользователя</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Авторизация не удалась"</string>

    //Страница авторизации
    <string name="title_main_page">Вход</string>
    <string name="email_main_page">Электронная почта</string>
    <string name="password_main_page">Пароль</string>
    <string name="signup_main_text">Войти</string>
    <string name="question_main_page">Нет аккаунта?</string>
    <string name="url_main_page">Зарегистрируйтесь</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    //Заголовки страниц
    <string name="title_home">Главная</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_attendance">Посещение</string>
    <string name="title_profile">Профиль</string>
    <string name="title_SOP">СОП</string>

    // Vladimir added
    <string name="action_login">Sign in</string> //кнопка раз
    <string name="action_register">Register</string> //кнопка два

    // заголовки пунктов меню
    <string name="menu_sop">СОП</string>
    <string name="menu_home">Главная</string>
    <string name="menu_schedule">Расписание</string>
    <string name="menu_attendance">Посещение</string>
    <string name="menu_profile">Профиль</string>

    <string name="Gid">TODO</string>

     //Фрагмент главной
     <string name="week_text">Текущая неделя: 05.09 - 11.09 (#2) Знаменатель</string>
     <string name="text_schedule_today">Расписание занятий на сегодня</string>
     <string name="text_addendance">Информация о посещаемости в текущем семестре</string>

     //Фрагмент профиля
     <string name="gid">TODO</string>
     <string name="name_profile">Фамилия Имя Отчество</string>
     <string name="info_pers">Общая информация о пользователе</string>
     <string name="exit_label">Выйти</string>

     //Фрагмент расписания
     <string name="schedule_tomorrow">Расписание занятий на завтра</string>
     <string name="text_schedule">Расписание занятий на первый семестр 2022-2023 учебного года</string>

 </resources>