<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.signup_pageFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/signup_button"
        android:padding="10dp"
        android:text="@string/signup_main_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_main_page3" />

    <EditText
        android:id="@+id/password_main_page3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_main_page"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_main_page" />

    <TextView
        android:id="@+id/question_main_page3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question_main_page"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/url_main_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <EditText
        android:id="@+id/email_main_page"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="59dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_main_page"
        android:inputType="textEmailAddress"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password_main_page3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main_page" />

    <TextView
        android:id="@+id/text_main_page"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/title_main_page"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/url_main_page"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/url_main_page"
        android:gravity="center_horizontal|top"
        android:minHeight="48dp"
        android:text="@string/url_main_page"
        android:textAlignment="center"
        android:textColor="#0277BD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_main_page3" />

</androidx.constraintlayout.widget.ConstraintLayout>