<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="5"
        android:textSize="180sp" />

</FrameLayout>-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_day"
    app:circularflow_defaultRadius="30dp"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/exit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/ic_exit"
        android:drawablePadding="14dp"
        android:text="@string/exit_label"
        android:textColor="@color/basic_text_day"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_pers" />

    <ImageView
        android:id="@+id/imageGid"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="286dp"
        android:contentDescription="@string/gid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gid" />

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="108dp"
        android:text="@string/name_profile"
        android:textColor="@color/basic_text_day"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageGid"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_pers"
        android:layout_width="351dp"
        android:layout_height="167dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/info_pers"
        android:textAlignment="center"
        android:textColor="@color/basic_text_day"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGid" />

</androidx.constraintlayout.widget.ConstraintLayout>