<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.ScheduleFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="2"
        android:textSize="180sp" />

</FrameLayout>-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.ScheduleFragment"
    android:background="@drawable/back_day">

    <TextView
        android:id="@+id/week_text2"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/week_text"
        android:textAlignment="center"
        android:textColor="@color/basic_text_day"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_schedule"
        android:layout_width="351dp"
        android:layout_height="316dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/text_schedule"
        android:textAlignment="center"
        android:textColor="@color/basic_text_day"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_tomorrow" />

    <TextView
        android:id="@+id/schedule_tomorrow"
        android:layout_width="352dp"
        android:layout_height="238dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/schedule_tomorrow"
        android:textAlignment="center"
        android:textColor="@color/basic_text_day"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week_text2" />

</androidx.constraintlayout.widget.ConstraintLayout>